<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_SIM_PIEZO_CFG" Id="{edbef554-0fe8-4611-8104-3e2beb2a8221}">
    <Declaration><![CDATA[TYPE T_SIM_PIEZO_CFG :
STRUCT
	nMaxError:		INT 	:= 0;		// Maximal Simulated feedback error [bit]
	nSignalCycle:	UDINT	:= 10000;	// Period for complete sine wave error cycle [msec] 
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>